job-pod.yaml
apiVersion: v1
kind: Pod
spec:
  containers:
    - name: shell
      image: ubuntu
      command:
        - sleep
      args:
        - infinity
