k8s-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: thomasflanigan
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site
  namespace: thomasflanigan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site
  template:
    metadata:
      labels:
        app: site
    spec:
      containers:
      - name: nginx
#       Meant to be run with envsubst
        image: $TOMS_SITE_IMG
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: site-svc
  namespace: thomasflanigan
spec:
  selector:
    app: site
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: thomasflanigan
    networking.gke.io/managed-certificates: site-cert
    networking.gke.io/v1beta1.FrontendConfig: site-fe
  name: site-ingress
  namespace: thomasflanigan
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: site-svc
                port:
                  number: 8080
---
# Test site --------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-test
  namespace: services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tlf-test
  template:
    metadata:
      labels:
        app: site
    spec:
      containers:
        - name: nginx
          image: gcr.io/tom-personal-287221/tlf-test:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: site-svc-test
  namespace: services
spec:
  selector:
    app: site
  type: NodePort
  ports:
    - protocol: TCP
      port: 60001
      targetPort: 80
